[package]
name = "simple-test"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple inferlet test example"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
inferlet.workspace = true
inferlet-macros.workspace = true
futures = "0.3.31"
pico-args = "0.5.0"
